--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: objective-c
 xcode_project: MNShowcaseView.xcodeproj # path to your xcodeproj folder
 xcode_scheme: MNShowcaseView
 
+osx_image: xcode7
+
 script: xctool -project MNShowcaseView.xcodeproj -scheme MNShowcaseView build  CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
