--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ osx_image: xcode7
 
 script: 
   - xctool -project MNShowcaseView.xcodeproj -scheme MNShowcaseView build  CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
-  - xctool -project MNShowcaseView.xcodeproj -scheme MNShowcaseViewTests build test -sdk iphonesimulator GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES
+  - xctool -project MNShowcaseView.xcodeproj -scheme MNShowcaseViewTests test -sdk iphonesimulator GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES
 after_success:
   - bash <(curl -s https://codecov.io/bash)
