--- a/MNShowcaseView.xcodeproj/xcshareddata/xcschemes/MNShowcaseViewTests.xcscheme
+++ b/MNShowcaseView.xcodeproj/xcshareddata/xcschemes/MNShowcaseViewTests.xcscheme
@@ -23,13 +23,22 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "7DD32E781BCC24C000C57D7C"
+            BuildableName = "MNShowcaseView.app"
+            BlueprintName = "MNShowcaseView"
+            ReferencedContainer = "container:MNShowcaseView.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
